Fix add save realtime and save room in detail

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -18,6 +18,7 @@
             tools:context=".activity.DetailActivity">
 
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/back"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -106,16 +107,16 @@
                     android:id="@+id/carouselView"
                     android:layout_width="match_parent"
                     android:layout_height="220dp"
+                    android:layout_marginTop="50dp"
                     app:fillColor="#FFFFFFFF"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
                     app:pageColor="#00000000"
                     app:radius="6dp"
                     app:slideInterval="3000"
                     app:strokeColor="#FF777777"
-                    app:strokeWidth="1dp"
-                    android:layout_marginTop="50dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"/>
+                    app:strokeWidth="1dp" />
 
                 <TextView
                     android:id="@+id/txtTitle"
@@ -199,7 +200,6 @@
         android:layout_marginTop="6dp"
         android:backgroundTint="#00000000"
         android:drawableStart="@drawable/ic_baseline_arrow_back_ios_24"
-        android:onClick="onButtonBackClick"
         android:text="" />
 
     <TextView
