--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -51,7 +51,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/etAccountR"
+        android:id="@+id/etAccountP"
         android:layout_width="340dp"
         android:layout_height="50dp"
         android:layout_marginTop="30dp"
@@ -97,10 +97,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.549"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etAccountR" />
+        app:layout_constraintTop_toBottomOf="@+id/etAccountP" />
 
     <EditText
-        android:id="@+id/etPhoneR"
+        android:id="@+id/etPhoneP"
         android:layout_width="340dp"
         android:layout_height="50dp"
         android:layout_marginTop="30dp"
@@ -117,7 +117,7 @@
         app:layout_constraintTop_toBottomOf="@+id/etPasswordR" />
 
     <EditText
-        android:id="@+id/etEmailR"
+        android:id="@+id/etEmailP"
         android:layout_width="340dp"
         android:layout_height="50dp"
         android:layout_marginStart="39dp"
@@ -132,10 +132,10 @@
         android:padding="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etPhoneR" />
+        app:layout_constraintTop_toBottomOf="@+id/etPhoneP" />
 
     <Button
-        android:id="@+id/btnLogin"
+        android:id="@+id/btnUpdate"
         android:layout_width="340dp"
         android:layout_height="50dp"
         android:layout_marginStart="32dp"
@@ -146,7 +146,7 @@
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etEmailR" />
+        app:layout_constraintTop_toBottomOf="@+id/etEmailP" />
 
     <Button
         android:id="@+id/next_btn"
