--- a/app/src/main/res/layout/fragment_search_activity.xml
+++ b/app/src/main/res/layout/fragment_search_activity.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/search_frag"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragment.SearchFragment">
@@ -24,6 +25,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/topView" />
+
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyleHorizontal"
@@ -52,27 +54,26 @@
         android:layout_width="302dp"
         android:layout_height="42dp"
         android:layout_marginTop="16dp"
+        android:background="@drawable/round_bg"
+        android:backgroundTint="#FFF"
         android:text="Chọn Khoảng cách"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnArea"
-        android:background="@drawable/round_bg"
-        android:backgroundTint="#FFF"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/btnArea" />
 
     <Button
         android:id="@+id/btnArea"
         android:layout_width="302dp"
         android:layout_height="42dp"
         android:layout_marginTop="16dp"
+        android:background="@drawable/round_bg"
+        android:backgroundTint="#FFF"
         android:text="Chọn diện tích"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnPrice"
-        android:backgroundTint="#FFF"
-        android:background="@drawable/round_bg"/>
+        app:layout_constraintTop_toBottomOf="@+id/btnPrice" />
 
     <TextView
         android:id="@+id/etPhone"
