--- a/app/src/main/res/layout/activity_review.xml
+++ b/app/src/main/res/layout/activity_review.xml
@@ -13,6 +13,17 @@
     android:layout_height="match_parent"
     tools:context=".activity.ReviewActivity">
 
+    <TextView
+        android:id="@+id/star_text"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textColor="#121111"
+        android:textSize="25sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imgHostAvatar"
+        app:layout_constraintTop_toBottomOf="@+id/ratingBar_room" />
+
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imgHostAvatar"
         android:layout_width="100dp"
