--- a/app/src/main/res/layout/fragment_profilefragment.xml
+++ b/app/src/main/res/layout/fragment_profilefragment.xml
@@ -95,7 +95,7 @@
             android:drawablePadding="16dp"
             android:ems="10"
             android:hint="Username"
-            android:inputType="textPersonName"
+            android:inputType="none"
             android:padding="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
