english to vietnamese

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -40,7 +40,7 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="28dp"
                     android:gravity="center_vertical"
-                    android:text="Mô tả chi tiết"
+                    android:text="@string/tv_detail"
                     android:textColor="#1D7ECC"
                     android:textSize="16sp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -139,7 +139,7 @@
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="340dp"
                     android:gravity="center_vertical"
-                    android:text="Bản Đồ"
+                    android:text="@string/tv_map"
                     android:textColor="#1D7ECC"
                     android:textSize="16sp"
                     app:layout_constraintEnd_toEndOf="parent"
