--- a/app/src/main/res/layout/activity_find_by_price.xml
+++ b/app/src/main/res/layout/activity_find_by_price.xml
@@ -41,7 +41,7 @@
         android:layout_marginTop="140dp"
         android:background="@drawable/round_bg"
         android:backgroundTint="@color/colorPrimary"
-        android:text="Hủy"
+        android:text="@string/btn_cancel"
         app:layout_constraintEnd_toStartOf="@+id/btnApply"
         app:layout_constraintHorizontal_bias="0.6"
         app:layout_constraintStart_toStartOf="parent"
@@ -96,7 +96,7 @@
         android:layout_marginTop="140dp"
         android:background="@drawable/round_bg"
         android:backgroundTint="@color/colorPrimary"
-        android:text="Apply"
+        android:text="@string/btn_apply"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.715"
         app:layout_constraintStart_toStartOf="parent"
