--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -10,7 +10,7 @@
         android:id="@+id/btnDirect"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Chỉ đường"
+        android:text="@string/btn_navigation"
         app:layout_constraintBottom_toBottomOf="@+id/map"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.919"
