--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -41,7 +41,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="40dp"
-        android:text="Create Account"
+        android:text="Tạo tài khoản"
         android:textColor="@android:color/white"
         android:textSize="40sp"
         android:textStyle="bold"
@@ -59,7 +59,7 @@
         android:drawableStart="@drawable/ic_username"
         android:drawablePadding="16dp"
         android:ems="10"
-        android:hint="Username"
+        android:hint="Tài khoản"
         android:inputType="textPersonName"
         android:padding="16dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -74,7 +74,7 @@
         android:drawableStart="@drawable/ic_display"
         android:drawablePadding="16dp"
         android:ems="10"
-        android:hint="Display Name"
+        android:hint="Tên của bạn"
         android:inputType="textPersonName"
         android:padding="16dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -91,7 +91,7 @@
         android:drawableStart="@drawable/ic_lock"
         android:drawablePadding="16dp"
         android:ems="10"
-        android:hint="Password"
+        android:hint="Mật khẩu"
         android:inputType="textPassword"
         android:padding="16dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -108,7 +108,7 @@
         android:drawableStart="@drawable/ic_phone"
         android:drawablePadding="16dp"
         android:ems="10"
-        android:hint="Phone"
+        android:hint="Số điện thoại"
         android:inputType="textPersonName"
         android:padding="16dp"
         app:layout_constraintEnd_toEndOf="parent"
