--- a/app/src/main/res/layout/activity_find.xml
+++ b/app/src/main/res/layout/activity_find.xml
@@ -32,7 +32,7 @@
         android:layout_marginTop="172dp"
         android:background="@drawable/round_bg"
         android:backgroundTint="@color/colorPrimary"
-        android:text="Hủy"
+        android:text="@string/btn_cancel"
         app:layout_constraintEnd_toStartOf="@+id/btnApply"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/seekBar2" />
@@ -89,7 +89,7 @@
         android:layout_marginEnd="100dp"
         android:background="@drawable/round_bg"
         android:backgroundTint="@color/colorPrimary"
-        android:text="Apply"
+        android:text="@string/btn_apply"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/seekBar2" />
 
