--- a/app/src/main/res/layout/fragment_search_activity.xml
+++ b/app/src/main/res/layout/fragment_search_activity.xml
@@ -99,4 +99,16 @@
         app:layout_constraintTop_toBottomOf="@+id/progressBar"
         app:layout_constraintVertical_bias="1.0" />
 
+    <TextView
+        android:id="@+id/txtEr"
+        android:layout_width="200dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="132dp"
+        android:textAlignment="center"
+        android:textSize="18dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/list_room_frag_k" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
