--- a/app/src/main/res/layout/activity_find.xml
+++ b/app/src/main/res/layout/activity_find.xml
@@ -34,6 +34,7 @@
         android:backgroundTint="@color/colorPrimary"
         android:text="@string/btn_cancel"
         app:layout_constraintEnd_toStartOf="@+id/btnApply"
+        app:layout_constraintHorizontal_bias="0.484"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/seekBar2" />
 
@@ -86,7 +87,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="172dp"
-        android:layout_marginEnd="100dp"
+        android:layout_marginEnd="68dp"
         android:background="@drawable/round_bg"
         android:backgroundTint="@color/colorPrimary"
         android:text="@string/btn_apply"
@@ -98,6 +99,7 @@
         android:layout_width="303dp"
         android:layout_height="54dp"
         android:layout_marginTop="112dp"
+        android:indeterminate="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtHeader" />
