--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="colorDetail">#1D7ECC</color>
+
+    <color name="tab_background_selected">#1D7ECC</color>
+    <color name="tab_background_unselected">#000000</color>
 </resources>
