--- a/app/src/main/res/layout/activity_find.xml
+++ b/app/src/main/res/layout/activity_find.xml
@@ -29,12 +29,14 @@
         android:id="@+id/btnCancel"
         android:layout_width="96dp"
         android:layout_height="46dp"
+        android:layout_marginStart="60dp"
         android:layout_marginTop="172dp"
         android:background="@drawable/round_bg"
         android:backgroundTint="@color/colorPrimary"
         android:text="@string/btn_cancel"
+        android:textColor="@color/colorAccent"
         app:layout_constraintEnd_toStartOf="@+id/btnApply"
-        app:layout_constraintHorizontal_bias="0.484"
+        app:layout_constraintHorizontal_bias="0.196"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/seekBar2" />
 
@@ -77,6 +79,7 @@
         android:layout_marginTop="100dp"
         android:textAlignment="center"
         android:textSize="30dp"
+        android:textColor="@color/colorAccent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
@@ -87,10 +90,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="172dp"
-        android:layout_marginEnd="68dp"
+        android:layout_marginEnd="76dp"
         android:background="@drawable/round_bg"
         android:backgroundTint="@color/colorPrimary"
         android:text="@string/btn_apply"
+        android:textColor="@color/colorAccent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/seekBar2" />
 
