--- a/app/src/main/res/layout/activity_find_by_price.xml
+++ b/app/src/main/res/layout/activity_find_by_price.xml
@@ -43,6 +43,7 @@
         android:background="@drawable/round_bg"
         android:backgroundTint="@color/colorPrimary"
         android:text="@string/btn_cancel"
+        android:textColor="@color/colorAccent"
         app:layout_constraintEnd_toStartOf="@+id/btnApply"
         app:layout_constraintHorizontal_bias="0.543"
         app:layout_constraintStart_toStartOf="parent"
@@ -85,6 +86,7 @@
         android:layout_marginTop="100dp"
         android:textAlignment="center"
         android:textSize="30dp"
+        android:textColor="@color/colorAccent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
@@ -98,6 +100,7 @@
         android:background="@drawable/round_bg"
         android:backgroundTint="@color/colorPrimary"
         android:text="@string/btn_apply"
+        android:textColor="@color/colorAccent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.777"
         app:layout_constraintStart_toStartOf="parent"
