--- a/app/src/main/res/layout/activity_review.xml
+++ b/app/src/main/res/layout/activity_review.xml
@@ -75,21 +75,21 @@
         app:layout_constraintTop_toBottomOf="@+id/tvRoomTitle"
         app:layout_constraintVertical_bias="0.0" />
 
+
     <TextView
         android:id="@+id/textView10"
         android:layout_width="351dp"
         android:layout_height="53dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="20dp"
         android:gravity="center"
         android:text="@string/comment_text"
         android:textColor="#121111"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imgHostAvatar" />
-
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/userAvatar"
