--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -12,7 +12,7 @@
         android:id="@+id/imgSplash"
         android:layout_width="238dp"
         android:layout_height="306dp"
-        android:layout_marginStart="83dp"
+        android:layout_marginStart="84dp"
         android:layout_marginTop="72dp"
         android:layout_marginEnd="84dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -27,7 +27,7 @@
         android:layout_height="73dp"
         android:layout_marginTop="24dp"
         android:fontFamily="sans-serif-smallcaps"
-        android:text="Pemo Home"
+        android:text="@string/logo_name"
         android:textAlignment="center"
         android:textColor="#242425"
         android:textSize="40sp"
