--- a/app/src/main/res/layout/fragment_profilefragment.xml
+++ b/app/src/main/res/layout/fragment_profilefragment.xml
@@ -77,6 +77,7 @@
             android:background="@drawable/round_bg"
             android:text="@string/btn_update"
             android:textSize="18sp"
+            android:textColor="@color/colorAccent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/etPhoneP" />
