--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#1D7Eff</color>
+    <color name="colorPrimary">#508991</color>
     <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorAccent">#FFF</color>
     <color name="colorDetail">#1D7ECC</color>
 
     <color name="tab_background_selected">#1D7ECC</color>
