--- a/app/src/main/res/layout/fragment_profilefragment.xml
+++ b/app/src/main/res/layout/fragment_profilefragment.xml
@@ -145,6 +145,7 @@
             android:inputType="textPersonName"
             android:textSize="26sp"
             android:textStyle="bold"
+            android:textColor="@color/colorAccent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.144"
             app:layout_constraintStart_toEndOf="@+id/imgHostAvatar"
@@ -156,6 +157,7 @@
             android:layout_height="24dp"
             android:layout_marginTop="116dp"
             android:textStyle="italic"
+            android:textColor="@color/colorAccent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.118"
             app:layout_constraintStart_toEndOf="@+id/imgHostAvatar"
