--- a/app/src/main/res/layout/room_view.xml
+++ b/app/src/main/res/layout/room_view.xml
@@ -67,7 +67,7 @@
             android:layout_marginTop="10dp"
             android:ellipsize="end"
             android:maxLines="2"
-            android:textColor="#8F8B8D"
+            android:textColor="#333"
             android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textView"
@@ -80,7 +80,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:text="@string/address"
-            android:textColor="#8F8B8D"
+            android:textColor="#333"
             android:textSize="15sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
